<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.openmanagement</groupId>
    <artifactId>open-management</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>open-management</name>
    <description>Open Management Platform</description>

    <modules>
        <module>om-common</module>
        <module>om-auth</module>
        <module>om-system</module>
        <module>om-org</module>
        <module>om-workflow</module>
        <module>om-file</module>
        <module>om-message</module>
        <module>om-audit</module>
        <module>om-hr</module>
        <module>om-oa</module>
        <module>om-asset</module>
        <module>om-app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.7</mybatis-plus.version>
        <flowable.version>7.0.1</flowable.version>
        <minio.version>8.6.0</minio.version>
        <sa-token.version>1.38.0</sa-token.version>
        <hutool.version>5.8.27</hutool.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <knife4j.version>4.4.0</knife4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-org</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-workflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-file</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-message</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-audit</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-hr</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-oa</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-asset</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openmanagement</groupId>
                <artifactId>om-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- Flowable -->
            <dependency>
                <groupId>org.flowable</groupId>
                <artifactId>flowable-spring-boot-starter</artifactId>
                <version>${flowable.version}</version>
            </dependency>

            <!-- MinIO -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <!-- Sa-Token -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-jackson</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- MapStruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Knife4j -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
